--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
                             <ul class="header-contacts-list">
                                 <li class="header-item">
                                     <a class="header-contacts-link" href="mailto:info@devstudio.com">
-                                        <svg class="contacts-icon" width="16" hidden="12">
+                                        <svg class="contacts-icon" width="16" height="12">
                                             <use href="./images/icons.svg#icon-envelope"></use>
                                         </svg>info@devstudio.com
                                     </a>
                                 </li>
                                 <li class="header-item">
                                     <a class="header-contacts-link" href="tel:+380961111111">
-                                        <svg class="contacts-icon" width="10" hidden="12">
+                                        <svg class="contacts-icon" width="10" height="16">
                                             <use href="./images/icons.svg#icon-smartphone"></use>
                                         </svg>+38 096 111 11 11
                                     </a>
@@ -68,7 +68,7 @@
                                 <ul class="advantage-list">
                                     <li class="advantage-item">
                                         <div class="icon-box">
-                                            <svg class="advantage-icon" width="70" hidden="70">
+                                            <svg class="advantage-icon" width="70" height="70">
                                                 <use href="./images/icons.svg#icon-antenna"></use>
                                             </svg>
                                         </div>
@@ -77,7 +77,7 @@
                                     </li>
                                     <li class="advantage-item">
                                         <div class="icon-box">
-                                            <svg class="advantage-icon" width="70" hidden="70">
+                                            <svg class="advantage-icon" width="70" height="70">
                                                 <use href="./images/icons.svg#icon-clock"></use>
                                             </svg>
                                         </div>
@@ -86,7 +86,7 @@
                                     </li>
                                     <li class="advantage-item">
                                         <div class="icon-box">
-                                            <svg class="advantage-icon" width="70" hidden="70">
+                                            <svg class="advantage-icon" width="70" height="70">
                                                 <use href="./images/icons.svg#icon-diagram"></use>
                                             </svg>
                                         </div>
@@ -95,7 +95,7 @@
                                     </li>
                                     <li class="advantage-item">
                                         <div class="icon-box">
-                                            <svg class="advantage-icon" width="70" hidden="70">
+                                            <svg class="advantage-icon" width="70" height="70">
                                                 <use href="./images/icons.svg#icon-astronaut"></use>
                                             </svg>
                                         </div>
