--- a/portfolio.html
+++ b/portfolio.html
@@ -36,14 +36,14 @@
                             <ul class="header-contacts-list">
                                 <li class="header-item">
                                     <a class="header-contacts-link" href="mailto:info@devstudio.com">
-                                        <svg class="contacts-icon" width="16" hidden="12">
+                                        <svg class="contacts-icon" width="16" height="12">
                                             <use href="./images/icons.svg#icon-envelope"></use>
                                         </svg>info@devstudio.com
                                     </a>
                                 </li>
                                 <li class="header-item">
                                     <a class="header-contacts-link" href="tel:+380961111111">
-                                        <svg class="contacts-icon" width="10" hidden="12">
+                                        <svg class="contacts-icon" width="10" height="16">
                                             <use href="./images/icons.svg#icon-smartphone"></use>
                                         </svg>+38 096 111 11 11
                                     </a>
@@ -190,28 +190,28 @@
                                 <li class="footer-social-item">
                                     <a class="footer-social-link" href="">
                                         <svg class="footer-social-icon" width="20" height="20">
-                                            <use href="../images/icons.svg#icon-instagram"></use>
+                                            <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="footer-social-item">
                                     <a class="footer-social-link" href="">
                                         <svg class="footer-social-icon" width="20" height="20">
-                                            <use href="../images/icons.svg#icon-twitter"></use>
+                                            <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="footer-social-item">
                                     <a class="footer-social-link" href="">
                                         <svg class="footer-social-icon" width="20" height="20">
-                                            <use href="../images/icons.svg#icon-facebook"></use>
+                                            <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="footer-social-item">
                                     <a class="footer-social-link" href="">
                                         <svg class="footer-social-icon" width="20" height="20">
-                                            <use href="../images/icons.svg#icon-linkedin"></use>
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
